various css fixes, hover highlight, scrollbar visibility

--- a/client/public/styles/style.css
+++ b/client/public/styles/style.css
@@ -57,5 +57,5 @@ body {
 	height: 90vh;
 	width: 90vw;
 
-	border: yellow 1px solid;
+	border: black 1px dotted;
 }
